--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -67,11 +67,11 @@
             <li class="separator"></li>
             <li class="menu-item"><a href="{% url 'cohort_filelist' cohort.id %}" class="btn btn-info view-files-btn" title="View this cohort's file list">View Files</a></li>
             <li class="menu-item"><a href="{%  url 'download_ids' cohort.id %}" class="btn btn-info download-ids-btn" title="Download this cohort's patient and sample IDs">Download IDs</a></li>
-{#            <li class="separator"></li>#}
-{#            {% if cohort.perm.perm == 'OWNER' %}#}
-{#            <li class="menu-item"><button class="btn btn-info" data-toggle="modal" data-target="#share-cohort-modal">Share</button></li>#}
-{#            {% endif %}#}
-{#            <li class="menu-item"><a data-target="#share-cohort-modal" data-toggle="modal" class="btn btn-link" id="shared-with-btn">Shared with (<span class="share-count">{{ shared_with_users|length}}</span>)</a></li>#}
+            <li class="separator"></li>
+            {% if cohort.perm.perm == 'OWNER' %}
+            <li class="menu-item"><button class="btn btn-info" data-toggle="modal" data-target="#share-cohort-modal">Share</button></li>
+            {% endif %}
+            <li class="menu-item"><a data-target="#share-cohort-modal" data-toggle="modal" class="btn btn-link" id="shared-with-btn">Shared with (<span class="share-count">{{ shared_with_users|length}}</span>)</a></li>
         </ul>
         <ul id="edit-cohort-menu" style="display: none">
             {% if cohort.perm.perm == 'OWNER' %}
@@ -161,15 +161,15 @@
                                 {%  endif %}
                             {% endfor %}
                         </ul>
-{#                        {% if shared_with_users and cohort.perm == 'OWNER'%}#}
-{#                            <br>#}
-{#                            <p><strong>Shared With Users:</strong></p>#}
-{#                            <ul>#}
-{#                            {% for user in shared_with_users %}#}
-{#                                <li>{{ user.first_name }} {{ user.last_name }} [{{ user.email }}]</li>#}
-{#                            {% endfor %}#}
-{#                            </ul>#}
-{#                        {% endif %}#}
+                        {% if shared_with_users and cohort.perm == 'OWNER'%}
+                            <br>
+                            <p><strong>Shared With Users:</strong></p>
+                            <ul>
+                            {% for user in shared_with_users %}
+                                <li>{{ user.first_name }} {{ user.last_name }} [{{ user.email }}]</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
                     </div>
                     <div class="row col-md-12 space-bottom-10">
                         <span>Creation Filters:</span>
@@ -241,71 +241,66 @@
         </div>
     </div>
 
-{#    <!-- Share Cohort Modal -->#}
-{#    <div class="modal fade" id="share-cohort-modal" tabindex="-1" role="dialog" aria-labelledby="shareCohortModal" aria-hidden="true">#}
-{#        <div class="modal-dialog">#}
-{#            <div class="modal-content">#}
-{#                <div class="modal-header">#}
-{#                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>#}
-{#                    <h4 class="modal-title">Cohort Sharing</h4>#}
-{#                    <ul class="nav nav-tabs" role="tablist">#}
-{#                        {% if cohort.perm.perm == 'OWNER' %}#}
-{#                            <li role="presentation" class="active"><a data-target="#share-cohort-pane" data-toggle="tab" aria-controls="home" role="tab" id="shareCohortModal">Share Cohort</a></li>#}
-{#                        {% endif %}#}
-{#                        <li role="presentation"><a data-target="#shared-pane" data-toggle="tab" aria-controls="home" role="tab">Shared With (<span class="share-count">{{shared_with_users|length}}</span>)</a></li>#}
-{#                    </ul>#}
-{#                </div>#}
-{##}
-{#                <div class="tab-content">#}
-{#                    {% if cohort.perm.perm == 'OWNER' %}#}
-{#                    <div role="tabpanel" class="tab-pane active" id="share-cohort-pane">#}
-{#                        <form id="share-cohort-form" method="POST" action="{% url 'share_cohort' cohort.id %}">#}
-{#                            <div class="modal-body">#}
-{#                                <label for="selected-users">Please select users to share this cohort with:</label>#}
-{#                                <select name="users" id="selected-users" multiple="multiple" class="form-control">#}
-{#                                    {% for user in users %}#}
-{#                                    <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }} ({{ user.email }})</option>#}
-{#                                    {% endfor %}#}
-{#                                </select>#}
-{##}
-{#                            </div>#}
-{#                            <div class="modal-footer">#}
-{#                                {% csrf_token %}#}
-{#                                <input type="submit" value="Share Cohort" class="btn btn-primary" />#}
-{#                            </div>#}
-{#                        </form>#}
-{#                    </div>#}
-{#                    {% endif %}#}
-{#                    <div role="tabpanel" class="tab-pane" id="shared-pane">#}
-{#                        <div class="modal-body">#}
-{#                            {% if shared_with_users|length > 0 %}#}
-{#                            <table class="table table-striped">#}
-{#                                <thead>#}
-{#                                    <tr>#}
-{#                                        <th>Name</th>#}
-{#                                        <th>Email</th>#}
-{#                                        <th></th>#}
-{#                                    </tr>#}
-{#                                </thead>#}
-{#                                <tbody>#}
-{#                                {% for user in shared_with_users %}#}
-{#                                    <tr>#}
-{#                                        <td>{{user.first_name}} {{user.last_name}}</td>#}
-{#                                        <td>{{user.email}}</td>#}
-{#                                        <td><a class="remove-shared-user" role="button" data-user-id="{{ user.id }}" data-cohort-id="{{ cohort.id }}"><i class="fa fa-times"></i></a></td>#}
-{#                                    </tr>#}
-{#                                {% endfor %}#}
-{#                                </tbody>#}
-{#                            </table>#}
-{#                            {% else %}#}
-{#                            <p class="center">This list is empty.</p>#}
-{#                            {% endif %}#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
+    <!-- Share Cohort Modal -->
+    <div class="modal fade" id="share-cohort-modal" tabindex="-1" role="dialog" aria-labelledby="shareCohortModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Cohort Sharing</h4>
+                    <ul class="nav nav-tabs" role="tablist">
+                        {% if cohort.perm.perm == 'OWNER' %}
+                            <li role="presentation" class="active"><a data-target="#share-cohort-pane" data-toggle="tab" aria-controls="home" role="tab" id="shareCohortModal">Share Cohort</a></li>
+                        {% endif %}
+                        <li role="presentation"><a data-target="#shared-pane" data-toggle="tab" aria-controls="home" role="tab">Shared With (<span class="share-count">{{shared_with_users|length}}</span>)</a></li>
+                    </ul>
+                </div>
+
+                <div class="tab-content">
+                    {% if cohort.perm.perm == 'OWNER' %}
+                    <div role="tabpanel" class="tab-pane active" id="share-cohort-pane">
+                        <form id="share-cohort-form" method="POST" action="{% url 'share_cohort' cohort.id %}">
+                            <div class="modal-body">
+                                <label for="share-share_users">Enter email addresses separated by a comma</label>
+                                <textarea id="share-share_users" class="form-control" name="share_users"></textarea>
+                            </div>
+                            <div class="modal-footer">
+                                {% csrf_token %}
+                                <input type="submit" value="Send" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                    {% endif %}
+                    <div role="tabpanel" class="tab-pane" id="shared-pane">
+                        <div class="modal-body">
+                            {% if shared_with_users|length > 0 %}
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for user in shared_with_users %}
+                                    <tr>
+                                        <td>{{user.first_name}} {{user.last_name}}</td>
+                                        <td>{{user.email}}</td>
+                                        <td><a class="remove-shared-user" role="button" data-user-id="{{ user.id }}" data-cohort-id="{{ cohort.id }}"><i class="fa fa-times"></i></a></td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            {% else %}
+                            <p class="center">This list is empty.</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Apply Edits Modal -->
     <div class="modal fade" id="apply-edits-modal" tabindex="-1" role="dialog" aria-labelledby="applyFiltersModal" aria-hidden="true">
