--- a/templates/projects/program_modals.html
+++ b/templates/projects/program_modals.html
@@ -6,11 +6,13 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Program Details</h4>
             </div>
+            <div class="modal-js-messages" id="edit-program-js-messages">
+            </div>
             <form id="edit-program" method="POST" action="{% url 'program_edit' program.id %}">
                 {% csrf_token %}
                 <div class="modal-body">
                     <label for="share-viz-users">Name (required)</label>
-                    <input class="form-control" type="text" name="name" value="{{ program.name }}" required/>
+                    <input class="form-control" type="text" id="WJRL-program" name="name" value="{{ program.name }}" required/>
                     <br>
                     <label for="share-viz-users">Description (optional)</label>
                     <textarea class="form-control" name="description">{{program.description }}</textarea>
