--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -6,11 +6,13 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Project Details</h4>
             </div>
+            <div class="modal-js-messages" id="edit-project-js-messages">
+            </div>
             <form id="edit-project-{{ project.id }}" method="POST" action="{% url 'project_edit' program.id project.id %}">
                 {% csrf_token %}
                 <div class="modal-body">
                     <label for="share-viz-users">Name (required)</label>
-                    <input class="form-control" type="text" name="name" value="{{ project.name }}" required/>
+                    <input class="form-control" type="text" id="wjrl" name="name" value="{{ project.name }}" required/>
                     <br>
                     <label for="share-viz-users">Description (optional)</label>
                     <textarea class="form-control" name="description">{{project.description }}</textarea>
