-> Added #js-messages to base.html so it can be shown on any page if needed -> Clicking the share/shared-with buttons should now open the modal with the expected tab pre-selected -> Workbook share modal is no longer loaded at all if the requesting user isn't the owner of a workbook

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,20 +78,21 @@
         {% block page_header %}{% endblock %}
     </div>
     <div class="container">
-        {% if messages %}
-            {% autoescape off %}
-            <div class="row">
-                <div class="col-lg-12">
-                    {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }} alert-dismissible">
-                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                </div>
+        <div class="row">
+            <div class="col-lg-12">
+                {% if messages %}
+                    {% autoescape off %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ message.tags }} alert-dismissible">
+                                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endautoescape %}
+                {% endif %}
+                <div id="js-messages"></div>
             </div>
-            {% endautoescape %}
-        {% endif %}
+        </div>
         <div class="row">{% block content %}{% endblock %}</div>
     </div>
 
