--- a/templates/projects/program_modals.html
+++ b/templates/projects/program_modals.html
@@ -12,10 +12,10 @@
                 {% csrf_token %}
                 <div class="modal-body">
                     <label for="share-viz-users">Name (required)</label>
-                    <input class="form-control" type="text" id="WJRL-program" name="name" value="{{ program.name }}" required/>
+                    <input class="form-control" type="text" id="edit-program-name-field" name="name" value="{{ program.name }}" required/>
                     <br>
                     <label for="share-viz-users">Description (optional)</label>
-                    <textarea class="form-control" name="description">{{program.description }}</textarea>
+                    <textarea class="form-control" id="edit-program-desc-field" name="description">{{program.description }}</textarea>
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Update" class="btn btn-primary" />
