--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -28,7 +28,16 @@
         <p><i class="fa fa-check-circle"></i> dbGaP Access Authorized</p>
         <hr>
         <p>
-            Congratulations, {{ user_details.NIH_username }}! You now have access to ISB-CGC controlled access data ({{ user_details.auth_datasets|joinwith:', ' }}) until
+            Congratulations, {{ user_details.NIH_username }}! You now have access to ISB-CGC controlled access data (
+            {% with user_data_datasets_count=user_data_datasets|length %}
+            {% for dataset in user_details.auth_datasets %}
+                <a href="https://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id={{ dataset.whitelist_id }}" target="_BLANK">dataset.name</a>
+                {% if not forloop.counter == user_data_datasets_count %}
+                ,
+                {% endif %}
+            {% endfor %}
+            {% endwith %}
+            until
             <p id="NIH_expiration">{{ user_details.NIH_assertion_expiration|safe }} GMT</p>
             <a href="{% url 'demo:saml_index' %}?sso">Extend controlled access period to 24 hours from now.</a>
         </p>
