--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -6,16 +6,16 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Project Details</h4>
             </div>
-            <div class="modal-js-messages" id="edit-project-js-messages">
+            <div class="modal-js-messages" id="edit-project-js-messages-{{ project.id }}">
             </div>
             <form id="edit-project-{{ project.id }}" method="POST" class="project-edit-form" action="{% url 'project_edit' program.id project.id %}">
                 {% csrf_token %}
                 <div class="modal-body">
                     <label for="share-viz-users">Name (required)</label>
-                    <input class="form-control" type="text" id="edit-project-name-field" name="name" value="{{ project.name }}" required/>
+                    <input class="form-control edit-name-field" type="text" name="name" value="{{ project.name }}" required/>
                     <br>
                     <label for="share-viz-users">Description (optional)</label>
-                    <textarea class="form-control" id="edit-project-desc-field" name="description">{{project.description }}</textarea>
+                    <textarea class="form-control edit-desc-field"  name="description">{{project.description }}</textarea>
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Update" class="btn btn-primary" />
