--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -29,10 +29,10 @@
         <hr>
         <p>
             Congratulations, {{ user_details.NIH_username }}! You now have access to ISB-CGC controlled access data (
-            {% with user_data_datasets_count=user_data_datasets|length %}
-            {% for dataset in user_details.auth_datasets %}
+            {% with user_datasets_count=user_details.auth_datasets|length user_auth_datasets=user_details.auth_datasets %}
+            {% for dataset in user_auth_datasets %}
                 <a href="https://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id={{ dataset.whitelist_id }}" target="_BLANK">dataset.name</a>
-                {% if not forloop.counter == user_data_datasets_count %}
+                {% if not forloop.counter == user_datasets_count %}
                 ,
                 {% endif %}
             {% endfor %}
