-> Fixes for HTML spacing

--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -31,11 +31,7 @@
             Congratulations, {{ user_details.NIH_username }}! You now have access to ISB-CGC controlled access data (
             {% with user_datasets_count=user_details.auth_datasets|length user_auth_datasets=user_details.auth_datasets %}
             {% for dataset in user_auth_datasets %}
-                <a href="https://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id={{ dataset.whitelist_id }}" target="_BLANK">dataset.name</a>
-                {% if not forloop.counter == user_datasets_count %}
-                ,
-                {% endif %}
-            {% endfor %}
+                <a href="https://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id={{ dataset.whitelist_id }}" target="_BLANK">dataset.name</a>{% if not forloop.counter == user_datasets_count %},{% endif %}            {% endfor %}
             {% endwith %}
             until
             <p id="NIH_expiration">{{ user_details.NIH_assertion_expiration|safe }} GMT</p>
