-> Added DUCA ID to AuthorizedDataset so it can be linked on the Data Access panel -> Adjusted some spacing -> Added a section for dbGaP Auth + No datasets

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -92,6 +92,9 @@
 
         hr
             margin: 0px -15px 10px -15px
+
+        ul
+            margin-bottom: 10px
     .modal
         h4
             text-align: left
