--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -25,24 +25,23 @@
     <p>{{ workbook.description }}</p>
     <ul class="page-action-group" role="menubar">
         {% if workbook.owner.id == request.user.id %}
-        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target=".edit-workbook-details-modal">Edit Details</button></li>
-        <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
-        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#delete-workbook-modal-{{ workbook.id }}">Delete</button></li>
-        {% if is_shareable %}
-        <li class="separator"></li>
-        <li role="menuitem"><button class="btn btn-info share-modal" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Share</button></li>
-        <li role="menuitem"><button class="btn btn-link shared-with" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Shared with (<span class="share-count">{{ workbook.shared.all|shared_active_count }}</span>)</button></li>
-        {% endif %}
+            <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target=".edit-workbook-details-modal">Edit Details</button></li>
+            <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
+            <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#delete-workbook-modal-{{ workbook.id }}">Delete</button></li>
+            <li class="separator"></li>
+            <li role="menuitem"><button class="btn btn-info share-modal" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Share</button></li>
+            <li role="menuitem"><button class="btn btn-link shared-with" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Shared with (<span class="share-count">{{ workbook.shared.all|shared_active_count }}</span>)</button></li>
         {% elif workbook.is_public %}
-        {# Is a public workbook #}
-        <li><em>Public Workbook</em></li>
-        <li class="separator"></li>
-        <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
+            {# Is a public workbook #}
+            <li><h4>Public Workbook</h4></li>
+            <li class="separator"></li>
+            <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
         {% else %}
-        {# Is a shared workbook #}
-        <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
-        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#remove-workbook-modal-{{ workbook.id }}">Remove</button></li>
-        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Shared with (<span class="share-count">{{ workbook.shared.all|shared_active_count }}</span>)</button></li>
+            {# Is a shared workbook #}
+            <li><h4>Owner: {{ workbook.owner.first_name }} {{ workbook.owner.last_name }}</h4></li>
+            <li class="separator"></li>
+            <li role="menuitem"><button class="btn btn-info {% if not workbook.build %}disabled{% endif %}" data-toggle="modal" data-target="{% if workbook.build %}#copy-workbook-modal-{{ workbook.id }}{% endif %}">Duplicate</button></li>
+            <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#remove-workbook-modal-{{ workbook.id }}">Remove</button></li>
         {% endif %}
 
     </ul>
