-> Adjustments to Data Access panels

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -95,6 +95,8 @@
 
         ul
             margin-bottom: 10px
+            list-style: circle
+            margin-left: 15px
     .modal
         h4
             text-align: left
