--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -75,15 +75,17 @@
 
         table.user-info
             tr
+                td
+                    vertical-align: top
                 td:first-child
                     font-weight: bold
                     text-align: right
                     padding: 5px 10px
-                    width: 31%
+                    width: 20%
                 td:last-child
                     padding: 5px 10px
                     margin-left: 5px
-                    width: 500px
+                    width: 80%
 
         .fa-check-circle
             color: $primary-color
