--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -45,11 +45,11 @@
                         <td>{{ user_details.first_name }} {{ user_details.last_name }}</td>
                     </tr>
                     <tr>
-                        <td>Email Address</td>
+                        <td>Email</td>
                         <td>{{ user_details.email }}</td>
                     </tr>
                     <tr>
-                        <td>Last Logged In</td>
+                        <td>Last Login</td>
                         <td id="last_login">{{ user_details.last_login }}</td>
                     </tr>
                 </table>
